# CPP_RPG

./: CMakeLists.txt  Monster.cpp  Monster.h  README.md  RPG.cpp  RPG.h  Rankname.txt  Rankscore.txt  Role.cpp  Role.h  SKill.h  Skill.cpp  Skillname.txt  Skillnature.txt  main.cpp
.github/workflows/: mirror-to-gitee.yml
include/: Monster.h  RPG.h  Role.h  SKill.h
param/: Rankname.txt  Rankscore.txt  Skillname.txt  Skillnature.txt
src/: Monster.cpp  RPG.cpp  Role.cpp  Skill.cpp  main.cpp
